--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,17 +1,5 @@
-@import 'utils/variables';
-@import 'utils/visually-hidden';
-@import 'bases/resets';
-@import 'bases/logo';
-@import 'bases/common';
-@import 'components/container';
-@import 'components/section';
-@import 'components/button';
-@import 'layouts/header';
-@import 'layouts/hero';
-@import 'layouts/benefits';
-@import 'layouts/wedo';
-@import 'layouts/team';
-@import 'layouts/customers';
-@import 'layouts/footer';
-@import 'layouts/portfolio';
-@import 'layouts/modal-window';
+@import 'utils/index';
+@import '../fonts/font-face';
+@import 'bases/index';
+@import 'components/index';
+@import 'layouts/index';
