--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -9,7 +9,7 @@
   padding: 200px 0px;
 }
 
-.hero-title {
+.hero__title {
   max-width: 696px;
   font-weight: 900;
   font-size: 44px;
@@ -21,7 +21,7 @@
   color: var(--normal-color);
 }
 
-.hero-button {
+.hero__button {
   line-height: 1.88;
   letter-spacing: 0.06em;
   color: var(--normal-color);
