--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,10 +1,10 @@
-.our-team-list {
+.team {
   text-align: center;
   display: flex;
   column-gap: 30px;
 }
 
-.our-team-item {
+.team__item {
   flex-basis: calc((100% - 90px) / 4);
   background-color: var(--normal-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -12,11 +12,11 @@
   border-radius: 0px 0px 4px 4px;
 }
 
-.our-team-names {
+.team__wrapper {
   padding: 30px 0px;
 }
 
-.our-team-subtitle {
+.team__title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -24,7 +24,7 @@
   margin-bottom: 10px;
 }
 
-.our-team-ph {
+.team__text {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -32,13 +32,13 @@
   color: var(--minor-color);
 }
 
-.soc-list {
+.social {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
 
-.soc-link {
+.social__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -48,8 +48,8 @@
   fill: var(--color-deco);
 }
 
-.soc-link:hover,
-.soc-link:focus {
+.social__link:hover,
+.social__link:focus {
   fill: var(--normal-color);
   background-color: currentColor;
 }
