--- a/sass/layouts/_index.scss
+++ b/sass/layouts/_index.scss
@@ -1,7 +1,7 @@
 @import 'header';
 @import 'hero';
 @import 'benefits';
-@import 'wedo';
+@import 'what-we-do';
 @import 'team';
 @import 'customers';
 @import 'footer';
