--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,13 +1,13 @@
-.filters-list {
+.filters {
   display: flex;
   justify-content: center;
 }
 
-.filters-item:not(:last-child) {
+.filters__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.filters-button {
+.filters__button {
   font-weight: 500;
   line-height: 1.63;
   letter-spacing: 0.03em;
@@ -17,45 +17,45 @@
   padding: 6px 22px 6px 22px;
 }
 
-.filters-button:hover,
-.filters-button:focus {
+.filters__button:hover,
+.filters__button:focus {
   color: var(--normal-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.examples-list {
+.examples {
   margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.examples-item {
+.examples__item {
   flex-basis: calc((100% - 60px) / 3);
   background-color: var(--normal-color);
 }
 
-.examples-link {
+.examples__link {
   display: block;
 }
 
-.examples-link:hover,
-.examples-link:focus {
+.examples__link:hover,
+.examples__link:focus {
   color: inherit;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.examples-subtitle {
+.examples-title {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
 }
 
-.examples-ph {
+.examples-text {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
@@ -74,7 +74,7 @@
   overflow: hidden;
 }
 
-.overlay-ph {
+.overlay-text {
   font-size: 18px;
   line-height: 1.6;
   letter-spacing: 0.03em;
@@ -91,7 +91,7 @@
   transition: transform var(--transition-timing);
 }
 
-.examples-link:hover .overlay-ph,
-.examples-link:focus .overlay-ph {
+.examples__link:hover .overlay-text,
+.examples__link:focus .overlay-text {
   transform: translateY(0%);
 }
