--- a/sass/layouts/_what-we-do.scss
+++ b/sass/layouts/_what-we-do.scss
@@ -1,14 +1,14 @@
-.what-we-do-list {
+.what-we-do {
   display: flex;
   column-gap: 30px;
 }
 
-.what-we-do-item {
+.what-we-do__item {
   flex-basis: calc((100% - 60px) / 3);
   position: relative;
 }
 
-.what-we-do-wrap {
+.what-we-do__wrapper {
   width: 100%;
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
@@ -22,7 +22,7 @@
   left: 0;
 }
 
-.what-we-do-subtitle {
+.what-we-do__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
