--- a/sass/layouts/_modal-window.scss
+++ b/sass/layouts/_modal-window.scss
@@ -6,12 +6,14 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity var(--transition-timing), visibility var(--transition-timing);
+
+  &--is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 }
-.backdrop--is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
+
 .modal {
   width: 528px;
   min-height: 581px;
@@ -24,28 +26,29 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-.modal__button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
-  width: 30px;
-  height: 30px;
-  background-color: var(--normal-color);
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  &__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  position: absolute;
-  right: 8px;
-  top: 8px;
+    width: 30px;
+    height: 30px;
+    background-color: var(--normal-color);
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
 
-  transition: var(--transition-timing);
-}
+    position: absolute;
+    right: 8px;
+    top: 8px;
 
-.modal__button:focus,
-.modal__button:hover {
-  fill: var(--accent-color);
+    transition: var(--transition-timing);
+
+    &:focus,
+    &:hover {
+      fill: var(--accent-color);
+    }
+  }
 }
 
 .no-scroll {
@@ -54,93 +57,105 @@
 
 .form {
   width: 448px;
-}
 
-.form__title {
-  margin-bottom: 12px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  letter-spacing: 0.03em;
-  text-align: center;
-}
+  &__title {
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    text-align: center;
+  }
 
-.form__field:not(:nth-child(5)) {
-  margin-bottom: 10px;
-}
-.form__field:nth-child(5) {
-  margin-bottom: 20px;
-}
+  &__field:not(:nth-child(5)) {
+    margin-bottom: 10px;
+  }
+  &__field:nth-child(5) {
+    margin-bottom: 20px;
+  }
 
-.form-label {
-  display: block;
-  margin-bottom: 4px;
+  &__label {
+    display: block;
+    margin-bottom: 4px;
 
-  color: var(--minor-color);
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-}
+    color: var(--minor-color);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+  }
 
-.form-input {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  cursor: pointer;
-  outline: none;
-  width: 100%;
-  height: 40px;
-  padding: 10px 0px 10px 42px;
-  border-radius: 4px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  &__input {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    cursor: pointer;
+    outline: none;
+    width: 100%;
+    height: 40px;
+    padding: 10px 0px 10px 42px;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
 
-  transition: border-color var(--transition-timing);
+    transition: border-color var(--transition-timing);
+
+    &:focus {
+      border-color: var(--accent-color);
+    }
+
+    &__icon {
+      position: absolute;
+      top: 50%;
+      left: 12px;
+      transform: translateY(-50%);
+
+      transition: fill var(--transition-timing);
+    }
+    &:focus + &__icon {
+      fill: var(--accent-color);
+    }
+  }
+
+  &__text {
+    display: block;
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    resize: none;
+    cursor: pointer;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    outline: none;
+    transition: border-color var(--transition-timing);
+
+    &:focus {
+      border-color: var(--accent-color);
+    }
+
+    &::placeholder {
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 1.17;
+      letter-spacing: 0.01em;
+      color: rgba(117, 117, 117, 0.5);
+    }
+  }
+  &__button {
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: var(--normal-color);
+    background-color: var(--accent-color);
+    padding: 10px 52px;
+    min-width: 200px;
+    display: block;
+    margin: 0 auto;
+  }
 }
 
 .input-wrapper {
   position: relative;
 }
 
-.form-input__icon {
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  transform: translateY(-50%);
-
-  transition: fill var(--transition-timing);
-}
-
-.form-input:focus,
-.form-text:focus {
-  border-color: var(--accent-color);
-}
-
-.form-input:focus + .form-input__icon {
-  fill: var(--accent-color);
-}
-
-.form-text {
-  display: block;
-  width: 100%;
-  height: 120px;
-  padding: 12px 16px;
-  resize: none;
-  cursor: pointer;
-  border-radius: 4px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  outline: none;
-  transition: border-color var(--transition-timing);
-}
-
-.form-text::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.check-label {
+.check {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -150,56 +165,46 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
-}
 
-.check-span {
-  position: relative;
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--primary-color);
-  border-radius: 2px;
-  cursor: pointer;
-  margin-right: 7px;
+  &__span {
+    position: relative;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--primary-color);
+    border-radius: 2px;
+    cursor: pointer;
+    margin-right: 7px;
 
-  transition: background-color var(--transition-timing), box-shadow var(--transition-timing);
-}
+    transition: background-color var(--transition-timing), box-shadow var(--transition-timing);
 
-.check-input:checked + .check-span {
-  border: none;
-  background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
+    .check__input:checked + & {
+      border: none;
+      background-color: var(--accent-color);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+  }
 
-.check-icon {
-  fill: transparent;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: fill var(--transition-timing);
-}
+  &__icon {
+    fill: transparent;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: fill var(--transition-timing);
 
-.check-input:checked + .check-span .check-icon {
-  fill: var(--normal-color);
-}
-.check-link {
-  color: var(--accent-color);
-  text-decoration: underline;
-  transition: color var(--transition-timing);
-}
+    .check__input:checked + .check__span & {
+      fill: var(--normal-color);
+    }
+  }
 
-.check-link:hover,
-.check-link:focus {
-  color: var(--hover-color);
-}
+  &__link {
+    color: var(--accent-color);
+    text-decoration: underline;
+    transition: color var(--transition-timing);
 
-.form__button {
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  color: var(--normal-color);
-  background-color: var(--accent-color);
-  padding: 10px 52px;
-  min-width: 200px;
-  display: block;
-  margin: 0 auto;
+    &:hover,
+    &:focus {
+      color: var(--hover-color);
+    }
+  }
 }
