--- a/css/main.css
+++ b/css/main.css
@@ -373,7 +373,7 @@ img {
 }
 
 .section__title--hidden,
-.check-input {
+.check__input {
   position: absolute;
   white-space: nowrap;
   width: 1px;
@@ -430,47 +430,41 @@ img {
 .header {
   border-bottom: 1px solid #ececec;
 }
-
-.navigation,
-.pages,
-.main-navigation,
-.contacts {
+.header__navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.main-navigation {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
-.pages__item:not(:last-child),
-.contacts__item:not(:last-child) {
-  margin-right: 50px;
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.pages__link,
-.contacts__link {
+.pages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.pages__item:not(:last-child) {
+  margin-right: 50px;
+}
+.pages__link {
+  position: relative;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: inherit;
   display: block;
-  padding: 32px 0px;
+  padding: 32px 2px 32px 2px;
 }
-
-.pages__link {
-  position: relative;
-  padding-left: 2px;
-  padding-right: 2px;
-}
-
 .pages__link--current {
   color: var(--accent-color);
 }
-
 .pages__link--current::after {
   content: "";
   display: block;
@@ -482,7 +476,6 @@ img {
   left: 0;
   bottom: -1px;
 }
-
 .pages__link:not(.pages__link--current)::after {
   content: "";
   display: block;
@@ -500,20 +493,25 @@ img {
   transition: transform var(--transition-timing);
   transition: transform var(--transition-timing), -webkit-transform var(--transition-timing);
 }
-
 .pages__link:hover::after {
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
 }
 
-.contacts__icon {
-  margin-right: 10px;
-  fill: currentColor;
-  -webkit-transition: fill var(--transition-timing);
-  transition: fill var(--transition-timing);
+.contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
-
+.contacts__item:not(:last-child) {
+  margin-right: 50px;
+}
 .contacts__link {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: inherit;
+  padding: 32px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -522,6 +520,12 @@ img {
           align-items: center;
   font-style: normal;
   color: var(--minor-color);
+}
+.contacts__icon {
+  margin-right: 10px;
+  fill: currentColor;
+  -webkit-transition: fill var(--transition-timing);
+  transition: fill var(--transition-timing);
 }
 
 .hero {
@@ -534,7 +538,6 @@ img {
   text-align: center;
   padding: 200px 0px;
 }
-
 .hero__title {
   max-width: 696px;
   font-weight: 900;
@@ -546,7 +549,6 @@ img {
   text-transform: uppercase;
   color: var(--normal-color);
 }
-
 .hero__button {
   line-height: 1.88;
   letter-spacing: 0.06em;
@@ -564,12 +566,10 @@ img {
      -moz-column-gap: 30px;
           column-gap: 30px;
 }
-
 .benefits__item {
   -ms-flex-preferred-size: calc((100% - 90px) / 4);
       flex-basis: calc((100% - 90px) / 4);
 }
-
 .benefits__icon-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -586,7 +586,6 @@ img {
   height: 120px;
   border-radius: 4px;
 }
-
 .benefits__title {
   margin-bottom: 10px;
   font-size: 14px;
@@ -594,7 +593,6 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
-
 .benefits__text {
   font-size: 14px;
   line-height: 1.71;
@@ -610,13 +608,11 @@ img {
      -moz-column-gap: 30px;
           column-gap: 30px;
 }
-
 .what-we-do__item {
   -ms-flex-preferred-size: calc((100% - 60px) / 3);
       flex-basis: calc((100% - 60px) / 3);
   position: relative;
 }
-
 .what-we-do__wrapper {
   width: 100%;
   height: 70px;
@@ -634,7 +630,6 @@ img {
   bottom: 0;
   left: 0;
 }
-
 .what-we-do__title {
   font-weight: 700;
   font-size: 14px;
@@ -653,7 +648,6 @@ img {
      -moz-column-gap: 30px;
           column-gap: 30px;
 }
-
 .team__item {
   -ms-flex-preferred-size: calc((100% - 90px) / 4);
       flex-basis: calc((100% - 90px) / 4);
@@ -662,11 +656,9 @@ img {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-
 .team__wrapper {
   padding: 30px 0px;
 }
-
 .team__title {
   font-weight: 500;
   font-size: 16px;
@@ -674,7 +666,6 @@ img {
   letter-spacing: 0.03em;
   margin-bottom: 10px;
 }
-
 .team__text {
   font-size: 16px;
   line-height: 1.19;
@@ -692,7 +683,6 @@ img {
           justify-content: center;
   gap: 10px;
 }
-
 .social__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -708,9 +698,7 @@ img {
   border-radius: 50px;
   fill: var(--color-deco);
 }
-
-.social__link:hover,
-.social__link:focus {
+.social__link:hover, .social__link:focus {
   fill: var(--normal-color);
   background-color: currentColor;
 }
@@ -724,12 +712,10 @@ img {
           justify-content: center;
   gap: 30px;
 }
-
 .customers__item {
   width: 170px;
   height: 92px;
 }
-
 .customers__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -746,9 +732,7 @@ img {
   border: 1px solid var(--color-deco);
   border-radius: 4px;
 }
-
-.customers__link:hover,
-.customers__link:focus {
+.customers__link:hover, .customers__link:focus {
   border-color: var(--accent-color);
 }
 
@@ -777,18 +761,15 @@ img {
 .address {
   margin-top: 20px;
 }
-
 .address__item:nth-child(n+2) {
   margin-top: 9px;
 }
-
 .address__map {
   font-style: normal;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--normal-color);
 }
-
 .address__mail-and-tel {
   font-style: normal;
   line-height: 1.71;
@@ -799,7 +780,6 @@ img {
 .call {
   margin-right: 93px;
 }
-
 .call__title {
   font-weight: 700;
   margin-bottom: 20px;
@@ -826,9 +806,7 @@ img {
   fill: var(--normal-color);
   background-color: rgba(255, 255, 255, 0.1);
 }
-
-.social__item .social__link:hover,
-.social__item .social__link:focus {
+.social__item .social__link:hover, .social__item .social__link:focus {
   background-color: currentColor;
 }
 
@@ -838,7 +816,6 @@ img {
   display: flex;
   gap: 12px;
 }
-
 .subscription__input {
   min-width: 358px;
   height: 50px;
@@ -855,17 +832,14 @@ img {
   -webkit-transition: border-color var(--transition-timing);
   transition: border-color var(--transition-timing);
 }
-
 .subscription__input:focus {
   border-color: var(--normal-color);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-
 .subscription__input:hover {
   border-color: var(--accent-color);
 }
-
 .subscription__input::-webkit-input-placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -873,7 +847,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .subscription__input::-moz-placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -881,7 +854,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .subscription__input:-ms-input-placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -889,7 +861,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .subscription__input::-ms-input-placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -897,7 +868,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .subscription__input::placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -905,7 +875,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .subscription__button {
   line-height: 1.88;
   letter-spacing: 0.06em;
@@ -933,11 +902,9 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .filters__item:not(:last-child) {
   margin-right: 8px;
 }
-
 .filters__button {
   font-weight: 500;
   line-height: 1.63;
@@ -947,9 +914,7 @@ img {
   border-radius: 4px;
   padding: 6px 22px 6px 22px;
 }
-
-.filters__button:hover,
-.filters__button:focus {
+.filters__button:hover, .filters__button:focus {
   color: var(--normal-color);
   background-color: var(--accent-color);
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -964,52 +929,43 @@ img {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 30px;
+  /* hidden overlay*/
 }
-
 .examples__item {
   -ms-flex-preferred-size: calc((100% - 60px) / 3);
       flex-basis: calc((100% - 60px) / 3);
   background-color: var(--normal-color);
 }
-
 .examples__link {
   display: block;
 }
-
-.examples__link:hover,
-.examples__link:focus {
+.examples__link:hover, .examples__link:focus {
   color: inherit;
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
-.examples-title {
+.examples__title {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
 }
-
-.examples-text {
+.examples__text {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--minor-color);
 }
-
-.examples-box {
+.examples__box {
   padding: 20px 24px 20px 24px;
   border: 1px solid #eeeeee;
   border-top: none;
 }
-
-/* hidden overlay*/
-.card-wrap {
+.examples__wrap {
   position: relative;
   overflow: hidden;
 }
-
-.overlay-text {
+.examples__overlay {
   font-size: 18px;
   line-height: 1.6;
   letter-spacing: 0.03em;
@@ -1027,9 +983,7 @@ img {
   transition: transform var(--transition-timing);
   transition: transform var(--transition-timing), -webkit-transform var(--transition-timing);
 }
-
-.examples__link:hover .overlay-text,
-.examples__link:focus .overlay-text {
+.examples__link:hover .examples__overlay, .examples__link:focus .examples__overlay {
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
 }
@@ -1044,7 +998,6 @@ img {
   -webkit-transition: opacity var(--transition-timing), visibility var(--transition-timing);
   transition: opacity var(--transition-timing), visibility var(--transition-timing);
 }
-
 .backdrop--is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -1065,7 +1018,6 @@ img {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
-
 .modal__button {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1087,9 +1039,7 @@ img {
   -webkit-transition: var(--transition-timing);
   transition: var(--transition-timing);
 }
-
-.modal__button:focus,
-.modal__button:hover {
+.modal__button:focus, .modal__button:hover {
   fill: var(--accent-color);
 }
 
@@ -1100,7 +1050,6 @@ img {
 .form {
   width: 448px;
 }
-
 .form__title {
   margin-bottom: 12px;
   font-weight: 700;
@@ -1109,16 +1058,13 @@ img {
   letter-spacing: 0.03em;
   text-align: center;
 }
-
 .form__field:not(:nth-child(5)) {
   margin-bottom: 10px;
 }
-
 .form__field:nth-child(5) {
   margin-bottom: 20px;
 }
-
-.form-label {
+.form__label {
   display: block;
   margin-bottom: 4px;
   color: var(--minor-color);
@@ -1126,8 +1072,7 @@ img {
   line-height: 1.17;
   letter-spacing: 0.01em;
 }
-
-.form-input {
+.form__input {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -1141,12 +1086,10 @@ img {
   -webkit-transition: border-color var(--transition-timing);
   transition: border-color var(--transition-timing);
 }
-
-.input-wrapper {
-  position: relative;
+.form__input:focus {
+  border-color: var(--accent-color);
 }
-
-.form-input__icon {
+.form__input__icon {
   position: absolute;
   top: 50%;
   left: 12px;
@@ -1155,17 +1098,10 @@ img {
   -webkit-transition: fill var(--transition-timing);
   transition: fill var(--transition-timing);
 }
-
-.form-input:focus,
-.form-text:focus {
-  border-color: var(--accent-color);
-}
-
-.form-input:focus + .form-input__icon {
+.form__input:focus + .form__input__icon {
   fill: var(--accent-color);
 }
-
-.form-text {
+.form__text {
   display: block;
   width: 100%;
   height: 120px;
@@ -1178,48 +1114,60 @@ img {
   -webkit-transition: border-color var(--transition-timing);
   transition: border-color var(--transition-timing);
 }
-
-.form-text::-webkit-input-placeholder {
+.form__text:focus {
+  border-color: var(--accent-color);
+}
+.form__text::-webkit-input-placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-.form-text::-moz-placeholder {
+.form__text::-moz-placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-.form-text:-ms-input-placeholder {
+.form__text:-ms-input-placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-.form-text::-ms-input-placeholder {
+.form__text::-ms-input-placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-.form-text::placeholder {
+.form__text::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
+.form__button {
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--normal-color);
+  background-color: var(--accent-color);
+  padding: 10px 52px;
+  min-width: 200px;
+  display: block;
+  margin: 0 auto;
+}
 
-.check-label {
+.input-wrapper {
+  position: relative;
+}
+
+.check {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1236,8 +1184,7 @@ img {
   letter-spacing: 0.03em;
   color: #757575;
 }
-
-.check-span {
+.check__span {
   position: relative;
   width: 16px;
   height: 15px;
@@ -1250,15 +1197,13 @@ img {
   transition: background-color var(--transition-timing), box-shadow var(--transition-timing);
   transition: background-color var(--transition-timing), box-shadow var(--transition-timing), -webkit-box-shadow var(--transition-timing);
 }
-
-.check-input:checked + .check-span {
+.check__input:checked + .check__span {
   border: none;
   background-color: var(--accent-color);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
-.check-icon {
+.check__icon {
   fill: transparent;
   position: absolute;
   top: 50%;
@@ -1268,30 +1213,15 @@ img {
   -webkit-transition: fill var(--transition-timing);
   transition: fill var(--transition-timing);
 }
-
-.check-input:checked + .check-span .check-icon {
+.check__input:checked + .check__span .check__icon {
   fill: var(--normal-color);
 }
-
-.check-link {
+.check__link {
   color: var(--accent-color);
   text-decoration: underline;
   -webkit-transition: color var(--transition-timing);
   transition: color var(--transition-timing);
 }
-
-.check-link:hover,
-.check-link:focus {
+.check__link:hover, .check__link:focus {
   color: var(--hover-color);
-}
-
-.form__button {
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  color: var(--normal-color);
-  background-color: var(--accent-color);
-  padding: 10px 52px;
-  min-width: 200px;
-  display: block;
-  margin: 0 auto;
 }/*# sourceMappingURL=main.css.map */
