--- a/sass/layouts/_customers.scss
+++ b/sass/layouts/_customers.scss
@@ -2,25 +2,25 @@
   display: flex;
   justify-content: center;
   gap: 30px;
-}
 
-.customers__item {
-  width: 170px;
-  height: 92px;
-}
+  &__item {
+    width: 170px;
+    height: 92px;
+  }
 
-.customers__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  fill: var(--color-deco);
-  width: 100%;
-  height: 100%;
-  border: 1px solid var(--color-deco);
-  border-radius: 4px;
-}
+  &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: var(--color-deco);
+    width: 100%;
+    height: 100%;
+    border: 1px solid var(--color-deco);
+    border-radius: 4px;
 
-.customers__link:hover,
-.customers__link:focus {
-  border-color: var(--accent-color);
+    &:hover,
+    &:focus {
+      border-color: var(--accent-color);
+    }
+  }
 }
