--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -16,37 +16,37 @@
 
 .address {
   margin-top: 20px;
-}
 
-.address__item:nth-child(n + 2) {
-  margin-top: 9px;
-}
-.address__map {
-  font-style: normal;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--normal-color);
-}
+  &__item:nth-child(n + 2) {
+    margin-top: 9px;
+  }
+  &__map {
+    font-style: normal;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--normal-color);
+  }
 
-.address__mail-and-tel {
-  font-style: normal;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  &__mail-and-tel {
+    font-style: normal;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+  }
 }
 
 .call {
   margin-right: 93px;
-}
 
-.call__title {
-  font-weight: 700;
-  margin-bottom: 20px;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--normal-color);
+  &__title {
+    font-weight: 700;
+    margin-bottom: 20px;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--normal-color);
+  }
 }
 
 .social__item .social__link {
@@ -58,61 +58,60 @@
   border-radius: 50px;
   fill: var(--normal-color);
   background-color: rgba(255, 255, 255, 0.1);
-}
 
-.social__item .social__link:hover,
-.social__item .social__link:focus {
-  background-color: currentColor;
+  &:hover,
+  &:focus {
+    background-color: currentColor;
+  }
 }
 
 .subscription {
   display: flex;
   gap: 12px;
-}
 
-.subscription__input {
-  min-width: 358px;
-  height: 50px;
-  padding: 15px 0px 15px 15px;
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  outline: none;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  color: var(--normal-color);
+  &__input {
+    min-width: 358px;
+    height: 50px;
+    padding: 15px 0px 15px 15px;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    outline: none;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: var(--normal-color);
 
-  transition: border-color var(--transition-timing);
-}
+    transition: border-color var(--transition-timing);
 
-.subscription__input:focus {
-  border-color: var(--normal-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+    &:focus {
+      border-color: var(--normal-color);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
 
-.subscription__input:hover {
-  border-color: var(--accent-color);
-}
+    &:hover {
+      border-color: var(--accent-color);
+    }
 
-.subscription__input::placeholder {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.subscription__button {
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  color: var(--normal-color);
-  background-color: var(--accent-color);
-  min-width: 200px;
-  padding: 10px 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+    &::placeholder {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.25;
+      letter-spacing: 0.03em;
+      color: rgba(255, 255, 255, 0.6);
+    }
+  }
+  &__button {
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: var(--normal-color);
+    background-color: var(--accent-color);
+    min-width: 200px;
+    padding: 10px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
 }
