--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,86 +1,97 @@
 .header {
   border-bottom: 1px solid #ececec;
+
+  &__navigation {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
-.navigation,
-.pages,
-.main-navigation,
+.navigation {
+  display: flex;
+}
+
+.pages {
+  display: flex;
+
+  &__item:not(:last-child) {
+    margin-right: 50px;
+  }
+
+  &__link {
+    position: relative;
+
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: inherit;
+
+    display: block;
+    padding: 32px 2px 32px 2px;
+
+    &--current {
+      color: var(--accent-color);
+    }
+
+    &--current::after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      background-color: currentColor;
+
+      position: absolute;
+      left: 0;
+      bottom: -1px;
+    }
+
+    &:not(&--current)::after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      background-color: var(--accent-color);
+
+      position: absolute;
+      left: 0;
+      bottom: -1px;
+
+      transform: scaleX(0);
+      transition: transform var(--transition-timing);
+    }
+
+    &:hover::after {
+      transform: scaleX(1);
+    }
+  }
+}
+
 .contacts {
   display: flex;
-}
 
-.main-navigation {
-  justify-content: space-between;
-}
+  &__item:not(:last-child) {
+    margin-right: 50px;
+  }
 
-.pages__item:not(:last-child),
-.contacts__item:not(:last-child) {
-  margin-right: 50px;
-}
+  &__link {
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: inherit;
 
-.pages__link,
-.contacts__link {
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: inherit;
+    padding: 32px 0px;
 
-  display: block;
-  padding: 32px 0px;
-}
+    display: flex;
+    align-items: center;
+    font-style: normal;
+    color: var(--minor-color);
+  }
 
-.pages__link {
-  position: relative;
-  padding-left: 2px;
-  padding-right: 2px;
-}
-
-.pages__link--current {
-  color: var(--accent-color);
-}
-
-.pages__link--current::after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: currentColor;
-
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-}
-
-.pages__link:not(.pages__link--current)::after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-
-  transform: scaleX(0);
-  transition: transform var(--transition-timing);
-}
-
-.pages__link:hover::after {
-  transform: scaleX(1);
-}
-
-.contacts__icon {
-  margin-right: 10px;
-  fill: currentColor;
-  transition: fill var(--transition-timing);
-}
-
-.contacts__link {
-  display: flex;
-  align-items: center;
-  font-style: normal;
-  color: var(--minor-color);
+  &__icon {
+    margin-right: 10px;
+    fill: currentColor;
+    transition: fill var(--transition-timing);
+  }
 }
