--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -2,54 +2,54 @@
   text-align: center;
   display: flex;
   column-gap: 30px;
-}
 
-.team__item {
-  flex-basis: calc((100% - 90px) / 4);
-  background-color: var(--normal-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
+  &__item {
+    flex-basis: calc((100% - 90px) / 4);
+    background-color: var(--normal-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
 
-.team__wrapper {
-  padding: 30px 0px;
-}
+  &__wrapper {
+    padding: 30px 0px;
+  }
 
-.team__title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  margin-bottom: 10px;
-}
+  &__title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    margin-bottom: 10px;
+  }
 
-.team__text {
-  font-size: 16px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  margin-bottom: 16px;
-  color: var(--minor-color);
+  &__text {
+    font-size: 16px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    margin-bottom: 16px;
+    color: var(--minor-color);
+  }
 }
 
 .social {
   display: flex;
   justify-content: center;
   gap: 10px;
-}
 
-.social__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50px;
-  fill: var(--color-deco);
-}
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50px;
+    fill: var(--color-deco);
 
-.social__link:hover,
-.social__link:focus {
-  fill: var(--normal-color);
-  background-color: currentColor;
+    &:hover,
+    &:focus {
+      fill: var(--normal-color);
+      background-color: currentColor;
+    }
+  }
 }
