--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,10 +1,11 @@
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
-}
-.section--no-padding-top {
-  padding-top: 0;
-}
-.section--another-background {
-  background-color: var(--secondary-color);
+
+  &--no-padding-top {
+    padding-top: 0;
+  }
+  &--another-background {
+    background-color: var(--secondary-color);
+  }
 }
