--- a/css/main.css
+++ b/css/main.css
@@ -264,16 +264,16 @@ ul {
   text-decoration: none;
 }
 
-.logo__header {
+.navigation__logo {
   padding-top: 24px;
   margin-right: 93px;
 }
 
-.logo__dark {
+.logo--dark {
   color: #000000;
 }
 
-.logo__light {
+.logo--light {
   color: var(--normal-color);
 }
 
@@ -291,20 +291,6 @@ body {
 
 .title--with-margin-bottom {
   margin-bottom: 50px;
-}
-
-.link {
-  text-decoration: none;
-  color: currentColor;
-  font-size: 14px;
-  -webkit-transition: color var(--transition-timing), background-color var(--transition-timing), border-color var(--transition-timing), fill var(--transition-timing);
-  transition: color var(--transition-timing), background-color var(--transition-timing), border-color var(--transition-timing), fill var(--transition-timing);
-}
-
-.link:hover,
-.link:focus {
-  color: var(--accent-color);
-  fill: var(--accent-color);
 }
 
 img {
@@ -372,6 +358,20 @@ img {
   --transition-timing: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.examples__link, .address__mail-and-tel, .address__map, .customers__link, .social__link, .contacts__link, .pages__link {
+  text-decoration: none;
+  color: currentColor;
+  font-size: 14px;
+  -webkit-transition: color var(--transition-timing), background-color var(--transition-timing), border-color var(--transition-timing), fill var(--transition-timing), -webkit-box-shadow var(--transition-timing);
+  transition: color var(--transition-timing), background-color var(--transition-timing), border-color var(--transition-timing), fill var(--transition-timing), -webkit-box-shadow var(--transition-timing);
+  transition: color var(--transition-timing), background-color var(--transition-timing), border-color var(--transition-timing), box-shadow var(--transition-timing), fill var(--transition-timing);
+  transition: color var(--transition-timing), background-color var(--transition-timing), border-color var(--transition-timing), box-shadow var(--transition-timing), fill var(--transition-timing), -webkit-box-shadow var(--transition-timing);
+}
+.examples__link:hover, .address__mail-and-tel:hover, .address__map:hover, .customers__link:hover, .social__link:hover, .contacts__link:hover, .pages__link:hover, .examples__link:focus, .address__mail-and-tel:focus, .address__map:focus, .customers__link:focus, .social__link:focus, .contacts__link:focus, .pages__link:focus {
+  color: var(--accent-color);
+  fill: var(--accent-color);
+}
+
 .section__title--hidden,
 .check__input {
   position: absolute;
@@ -397,11 +397,9 @@ img {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-
 .section--no-padding-top {
   padding-top: 0;
 }
-
 .section--another-background {
   background-color: var(--secondary-color);
 }
@@ -419,9 +417,7 @@ img {
   transition: color var(--transition-timing), background-color var(--transition-timing), border-color var(--transition-timing), box-shadow var(--transition-timing);
   transition: color var(--transition-timing), background-color var(--transition-timing), border-color var(--transition-timing), box-shadow var(--transition-timing), -webkit-box-shadow var(--transition-timing);
 }
-
-.button:hover,
-.button:focus {
+.button:hover, .button:focus {
   background-color: var(--hover-color);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -430,7 +426,7 @@ img {
 .header {
   border-bottom: 1px solid #ececec;
 }
-.header__navigation {
+.header__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -713,7 +709,7 @@ img {
   gap: 30px;
 }
 .customers__item {
-  width: 170px;
+  width: calc((100% - 150px) / 6);
   height: 92px;
 }
 .customers__link {
