--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -9,10 +9,10 @@
 
   transition: color var(--transition-timing), background-color var(--transition-timing),
     border-color var(--transition-timing), box-shadow var(--transition-timing);
-}
 
-.button:hover,
-.button:focus {
-  background-color: var(--hover-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  &:hover,
+  &:focus {
+    background-color: var(--hover-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
 }
