--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,7 +1,7 @@
 .header {
-  border-bottom: 1px solid #ececec;
+  border-bottom: $borderDef #ececec;
 
-  &__navigation {
+  &__container {
     display: flex;
     justify-content: space-between;
   }
@@ -19,6 +19,7 @@
   }
 
   &__link {
+    @extend %link;
     position: relative;
 
     font-weight: 500;
@@ -76,6 +77,7 @@
   }
 
   &__link {
+    @extend %link;
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
