--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,10 +1,10 @@
 .team {
   text-align: center;
   display: flex;
-  column-gap: 30px;
+  column-gap: $gap;
 
   &__item {
-    flex-basis: calc((100% - 90px) / 4);
+    flex-basis: calc((100% - 3 * $gap) / 4);
     background-color: var(--normal-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -38,6 +38,7 @@
   gap: 10px;
 
   &__link {
+    @extend %link;
     display: flex;
     justify-content: center;
     align-items: center;
