--- a/sass/layouts/_modal-window.scss
+++ b/sass/layouts/_modal-window.scss
@@ -28,9 +28,7 @@
   transform: translate(-50%, -50%);
 
   &__button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex(flex, center, center);
 
     width: 30px;
     height: 30px;
@@ -59,11 +57,8 @@
   width: 448px;
 
   &__title {
+    @include font(700, 20px, 1.15, 0.03em);
     margin-bottom: 12px;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    letter-spacing: 0.03em;
     text-align: center;
   }
 
@@ -75,19 +70,15 @@
   }
 
   &__label {
+    @include font(null, 12px, 1.17, 0.01em);
     display: block;
     margin-bottom: 4px;
 
     color: var(--minor-color);
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
   }
 
   &__input {
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
+    @include font(null, 12px, 1.17, 0.01em);
     cursor: pointer;
     outline: none;
     width: 100%;
@@ -132,16 +123,12 @@
     }
 
     &::placeholder {
-      font-weight: 400;
-      font-size: 12px;
-      line-height: 1.17;
-      letter-spacing: 0.01em;
+      @include font(400, 12px, 1.17, 0.01em);
       color: rgba(117, 117, 117, 0.5);
     }
   }
   &__button {
-    line-height: 1.88;
-    letter-spacing: 0.06em;
+    @include font(null, null, 1.88, 0.06em);
     color: var(--normal-color);
     background-color: var(--accent-color);
     padding: 10px 52px;
@@ -156,15 +143,11 @@
 }
 
 .check {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include font(null, 14px, 1.71, 0.03em);
+  @include flex(flex, center, center);
   position: relative;
   margin-bottom: 30px;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--minor-color);
 
   &__span {
     position: relative;
