--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -7,9 +7,7 @@
   }
 
   &__icon-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex(flex, center, center);
     background-color: var(--secondary-color);
     margin-bottom: 30px;
     width: 270px;
@@ -18,17 +16,13 @@
   }
 
   &__title {
+    @include font(null, 14px, 1.14, 0.03em);
     margin-bottom: 10px;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
   }
 
   &__text {
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
+    @include font(null, 14px, 1.71, 0.03em);
     color: var(--minor-color);
   }
 }
