--- a/sass/layouts/_customers.scss
+++ b/sass/layouts/_customers.scss
@@ -1,6 +1,5 @@
 .customers {
-  display: flex;
-  justify-content: center;
+  @include flex(flex, center, null);
   gap: $gap;
 
   &__item {
@@ -10,9 +9,7 @@
 
   &__link {
     @extend %link;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex(flex, center, center);
     fill: var(--color-deco);
     width: 100%;
     height: 100%;
