--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,8 +2,7 @@
   border-bottom: $borderDef #ececec;
 
   &__container {
-    display: flex;
-    justify-content: space-between;
+    @include flex(flex, space-between, null);
   }
 }
 
@@ -21,10 +20,7 @@
   &__link {
     @extend %link;
     position: relative;
-
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+    @include font(500, null, 1.14, 0.02em);
     color: inherit;
 
     display: block;
@@ -78,15 +74,10 @@
 
   &__link {
     @extend %link;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: inherit;
+    @include font(500, null, 1.14, 0.02em);
+    @include flex(flex, null, center);
 
     padding: 32px 0px;
-
-    display: flex;
-    align-items: center;
     font-style: normal;
     color: var(--minor-color);
   }
