--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -10,19 +10,15 @@
 
   &__title {
     max-width: 696px;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    @include font(900, 44px, 1.36, 0.06em);
     margin: 0 auto;
     margin-bottom: 30px;
-    letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--normal-color);
   }
 
   &__button {
-    line-height: 1.88;
-    letter-spacing: 0.06em;
+    @include font(null, null, 1.88, 0.06em);
     color: var(--normal-color);
     background-color: var(--accent-color);
     padding: 10px 32px 10px 32px;
