--- a/sass/layouts/_what-we-do.scss
+++ b/sass/layouts/_what-we-do.scss
@@ -8,13 +8,10 @@
   }
 
   &__wrapper {
+    @include flex(flex, center, center);
     width: 100%;
     height: 70px;
     background-color: rgba(47, 48, 58, 0.8);
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
     position: absolute;
     bottom: 0;
@@ -22,10 +19,7 @@
   }
 
   &__title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
+    @include font(700, 14px, 1.14, 0.03em);
     text-transform: uppercase;
     color: var(--normal-color);
   }
