--- a/sass/bases/_common.scss
+++ b/sass/bases/_common.scss
@@ -3,14 +3,13 @@ body {
   color: var(--primary-color);
 }
 
-.title {
-  // @include font(null, 36px, 1.17, 0.03em);
+.section__title {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
 }
-.title--with-margin-bottom {
+.section__title--with-margin-bottom {
   margin-bottom: 50px;
 }
 
