--- a/sass/layouts/_index.scss
+++ b/sass/layouts/_index.scss
@@ -5,5 +5,6 @@
 @import 'team';
 @import 'customers';
 @import 'footer';
-@import 'portfolio';
+@import 'portfolio-filters';
+@import 'portfolio-examples';
 @import 'modal-window';
